--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Test Task Zoriana</title>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900|Roboto+Mono:400,500&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
